# eludris

./: .dockerignore  .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Eludris.example.toml  Eludris.toml  ExampleEludris.toml  README.md  docker-compose.override.yml  docker-compose.prebuilt.yml  docker-compose.yml  plan.md
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-cli.yml  build.yml  ci.yml
cli/: Cargo.toml  README.md  sqlx-data.json
cli/src/: attachments.rs  clean.rs  deploy.rs  lib.rs  logs.rs  main.rs  static_attachments.rs  stop.rs
effis/: Cargo.toml  Dockerfile
effis/src/: main.rs  rate_limit.rs  ratelimit.rs
effis/src/routes/: buckets.rs  index.rs  mod.rs  static_routes.rs
migrations/: 20220503092423_users.sql
oprish/: Cargo.toml  Dockerfile
oprish/src/: main.rs  rate_limit.rs  ratelimit.rs  tests.rs
oprish/src/routes/: mod.rs  rate_limits.rs  ratelimits.rs
oprish/src/routes/messages/: mod.rs
pandemonium/: Cargo.toml  Dockerfile
pandemonium/src/: :wq  handle_connection.rs  main.rs  rate_limit.rs  ratelimit.rs
plugins/: Cargo.toml
plugins/src/: lib.rs
src/: main.rs
src/gateway/: mod.rs
src/models/: client.rs  message.rs  mod.rs
src/rest/: messages.rs  mod.rs
src/utils/: mod.rs
tests/: docker-compose.yml
todel/: Cargo.toml  README.md  sqlx-data.json
todel/src/conf/: effis_rate_limits.rs  effis_ratelimits.rs  mod.rs  oprish_rate_limits.rs  oprish_ratelimits.rs
todel/src/http/: client_ip.rs
todel/src/ids/: mod.rs
todel/src/models/: files.rs  gateway.rs  info.rs  messages.rs  mod.rs  rate_limits.rs  ratelimits.rs  response.rs
