[package]
name = "eludris"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.18"
serde = "1.0"
serde_json = "1.0"
tokio-tungstenite = "0.17"
rocket_cors = "0.6.0-alpha1"
lazy_static = "1.4"
regex = "1.5"
log = "0.4"
env_logger = "0.9"
rand = "0.8"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies.sqlx]
version = "0.5"
features = ["mysql", "runtime-tokio-rustls"]

[dependencies.redis]
version = "0.21"
features = ["tokio-comp", "aio"]
