[package]
name = "eludris"
edition = "2021"
description = "A simple CLI to help you manage your Eludris instance"
version.workspace = true
documentation.workspace = true
license = "MIT"
description = "A CLI meant to help you with your Eludris-hosting related ventures!"
homepage = "https://github.com/eludris/eludris"
repository = "https://github.com/eludris/eludris"
readme = "README.md"
categories = [
	"command-line-utilities"
]
keywords = ["eludris"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.1", features = ["derive"] }
console = "0.15.5"
dialoguer = "0.10.3"
env_logger = "0.10.0"
indicatif = "0.17.3"
log = "0.4.17"
reqwest = { version = "0.11.14" }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "macros", "mysql", "offline"] }
todel = { version = "0.3.1", path = "../todel", features = ["logic"] }
tokio = { version = "1.24.2", features = ["rt-multi-thread", "macros", "process"] }
users = "0.11.0"
