[package]
name = "oprish"
edition = "2021"
version.workspace = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
log = "0.4.17"
env_logger = "0.9.0"
todel = { features = ["http"], path = "../todel", version = "0.3.0" }
deadpool-redis = "0.10.2"
rocket_db_pools = { version = "0.1.0-rc.2", features = ["deadpool_redis"] }
dotenv = "0.15.0"
anyhow = "1.0.66"
tokio = { version = "1.22.0", features = ["rt-multi-thread", "macros"] }
